@@ -7,8 +7,9 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
+import org.opensearch.migrations.bulkload.common.RfsDocumentOperation;
 import org.opensearch.migrations.bulkload.common.RfsLuceneDocument;
 
 import lombok.extern.slf4j.Slf4j;
@@ -41,9 +42,11 @@ public class LuceneReader {
                     startDocId,
                     sharedSegmentReaderScheduler,
                     maxDocumentsToReadAtOnce,
-                    reader.getIndexDirectoryPath())
+                    reader.getIndexDirectoryPath(),
+                    RfsDocumentOperation.INDEX)
             )
             .subscribeOn(sharedSegmentReaderScheduler) // Scheduler to read documents on
+            .publishOn(Schedulers.boundedElastic()) // Switch scheduler for subsequent chain
             .doFinally(s -> sharedSegmentReaderScheduler.dispose());
     }
 
@@ -66,13 +69,13 @@ public class LuceneReader {
         var sortedLeaves = originalLeaves.stream()
             .map(LuceneLeafReaderContext::reader)
             .sorted(SegmentNameSorter.INSTANCE)
-            .collect(Collectors.toList());
+            .toList();
 
         // Step 2: Build the list of ReaderAndBase objects with cumulative doc base
         var sortedReaderAndBase = new ArrayList<ReaderAndBase>();
         int cumulativeDocBase = 0;
         for (var segment : sortedLeaves) {
-            sortedReaderAndBase.add(new ReaderAndBase(segment, cumulativeDocBase));
+            sortedReaderAndBase.add(new ReaderAndBase(segment, cumulativeDocBase, segment.getLiveDocs()));
             cumulativeDocBase += segment.maxDoc();
         }
 
@@ -87,24 +90,22 @@ public class LuceneReader {
         if (index < 0) {
             var insertionPoint = -(index + 1);
             // index = Last segment index with docBaseInParent < startDocId
-            index = insertionPoint - 1;
-            assert index >= 0;
+            index = Math.max(insertionPoint - 1, 0);
         }
 
         // Step 5: Return the sublist starting from the first valid segment
         return Flux.fromIterable(sortedReaderAndBase.subList(index, sortedReaderAndBase.size()));
     }
 
-    static Flux<RfsLuceneDocument> readDocsFromSegment(ReaderAndBase readerAndBase, int docStartingId, Scheduler scheduler,
-                                                int concurrency, Path indexDirectoryPath) {
+    public static Flux<RfsLuceneDocument> readDocsFromSegment(ReaderAndBase readerAndBase, int docStartingId, Scheduler scheduler,
+                                                int concurrency, Path indexDirectoryPath, RfsDocumentOperation operation) {
         var segmentReader = readerAndBase.getReader();
-        var liveDocs = segmentReader.getLiveDocs();
+        var liveDocs = readerAndBase.getLiveDocs();
 
         int segmentDocBase = readerAndBase.getDocBaseInParent();
 
         // Start at
-        int startDocIdInSegment = Math.max(docStartingId - segmentDocBase, 0);
-        int numDocsToProcessInSegment = segmentReader.maxDoc() - startDocIdInSegment;
+        int startDocIdInSegment = (docStartingId <= segmentDocBase) ? 0 : docStartingId - segmentDocBase;
 
         // For any errors, we want to log the segment reader debug info so we can see which segment is causing the issue.
         // This allows us to pass the supplier to getDocument without having to recompute the debug info
@@ -117,19 +118,17 @@ public class LuceneReader {
         log.atDebug().setMessage("For segment: {}, migrating from doc: {}. Will process {} docs in segment.")
                 .addArgument(readerAndBase.getReader())
                 .addArgument(startDocIdInSegment)
-                .addArgument(numDocsToProcessInSegment)
+                .addArgument(() -> segmentReader.maxDoc() - startDocIdInSegment)
                 .log();
 
-        return Flux.range(startDocIdInSegment, numDocsToProcessInSegment)
-                .flatMapSequentialDelayError(docIdx -> Mono.defer(() -> {
+        var idxStream = (liveDocs != null) ? liveDocs.stream().filter(idx -> idx >= startDocIdInSegment) :
+            IntStream.range(startDocIdInSegment, segmentReader.maxDoc());
+        return Flux.fromStream(idxStream.boxed())
+            .flatMapSequentialDelayError(docIdx -> Mono.defer(() -> {
                     try {
-                        if (liveDocs == null || liveDocs.get(docIdx)) {
-                            // Get document, returns null to skip malformed docs
-                            RfsLuceneDocument document = LuceneReader.getDocument(segmentReader, docIdx.intValue(), true, segmentDocBase, getSegmentReaderDebugInfo, indexDirectoryPath);
-                            return Mono.justOrEmpty(document); // Emit only non-null documents
-                        } else {
-                            return Mono.empty(); // Skip non-live documents
-                        }
+                        // Get document, returns null to skip malformed docs
+                        RfsLuceneDocument document = LuceneReader.getDocument(segmentReader, docIdx, true, segmentDocBase, getSegmentReaderDebugInfo, indexDirectoryPath, operation);
+                        return Mono.justOrEmpty(document); // Emit only non-null documents
                     } catch (Exception e) {
                         // Handle individual document read failures gracefully
                         log.atError().setMessage("Error reading document from reader {} with index: {}")
@@ -145,7 +144,7 @@ public class LuceneReader {
                 .subscribeOn(scheduler);
     }
 
-    static RfsLuceneDocument getDocument(LuceneLeafReader reader, int luceneDocId, boolean isLive, int segmentDocBase, final Supplier<String> getSegmentReaderDebugInfo, Path indexDirectoryPath) {
+    public static RfsLuceneDocument getDocument(LuceneLeafReader reader, int luceneDocId, boolean isLive, int segmentDocBase, final Supplier<String> getSegmentReaderDebugInfo, Path indexDirectoryPath, RfsDocumentOperation operation) {
         LuceneDocument document;
         try {
             document = reader.document(luceneDocId);
@@ -226,6 +225,6 @@ public class LuceneReader {
         }
 
         log.atDebug().setMessage("Document {} read successfully").addArgument(openSearchDocId).log();
-        return new RfsLuceneDocument(segmentDocBase + luceneDocId, openSearchDocId, type, sourceBytes, routing);
+        return new RfsLuceneDocument(segmentDocBase + luceneDocId, openSearchDocId, type, sourceBytes, routing, operation);
     }
 }
